Closed
Bug 560504
Opened 15 years ago
Closed 15 years ago
JSAPI no longer compiles with Leopard's default compiler
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wes, Assigned: wes)
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
781 bytes,
patch
|
jorendorff
:
review+
|
Details | Diff | Splinter Review |
The default compiler being "gcc version 4.0.1 (Apple Inc. build 5465)". I believe this is XCode 3.01. Anyhow, it's what came on my Leopard DVD when I bought this mac.
What happen is that it refuses to build jsemit.o, with errors like this:
/Users/wes/hg/tracemonkey/js/src/jsemit.cpp:1239: error: ‘JSTreeContext’ has not been declared
/Users/wes/hg/tracemonkey/js/src/jsemit.cpp: In function ‘bool inStatement(JSStmtType)’:
/Users/wes/hg/tracemonkey/js/src/jsemit.cpp:1241: error: ‘topStmt’ was not declared in this scope
This bug was introduced very recently, I believe with change set 341ffe867ea8, Bug 558437 (although I haven't I been completely thorough in verifying that).
Jorendorff believes this is a compiler bug; not being a C++ guy I can't comment on that, but I think we should support this compiler if we can.
| Assignee | ||
Comment 1•15 years ago
|
||
This winds up being a two-colon fix
Assignee: general → wes
Attachment #440194 -
Flags: review?(jorendorff)
Updated•15 years ago
|
Attachment #440194 -
Attachment is patch: true
Attachment #440194 -
Attachment mime type: application/octet-stream → text/plain
Comment 2•15 years ago
|
||
Comment on attachment 440194 [details] [diff] [review]
Trivial patch to fix
I agree with all that.
Attachment #440194 -
Flags: review?(jorendorff) → review+
Comment 3•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 4•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•