Bug 560504 - Tweak friend class declaration in jsparse.h to work around compiler bug in Mac OS X Leopard's default compiler. r=jorendorff.

--HG--
extra : rebase_source : 164c7d281ec50463f36878e5fe29b30e2ac9e896